--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -26,10 +26,10 @@
 						<a href="#contactContainer">Contact</a>
 					</section>
 					<section class="socialLinks">
-						<a href="https://github.com/dprovenzano13" target="none"><i class="fa-brands fa-github"></i></a>
-						<a href="https://twitter.com/d_provenzano_" target="none"><i class="fa-brands fa-twitter"></i></a>
-						<a href="https://www.linkedin.com/in/dprovenzano13/" target="none"><i class="fa-brands fa-linkedin"></i></a>
-						<a href="" target="none"><i class="fa-solid fa-envelope"></i></a>
+						<a href="https://github.com/dprovenzano13" target="_blank"><i class="fa-brands fa-github"></i></a>
+						<a href="https://twitter.com/d_provenzano_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+						<a href="https://www.linkedin.com/in/dprovenzano13/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+						<a href="mailto:dprovenzano13@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 					</section>
 					<button class="hamburger">
 						<span></span>
@@ -45,7 +45,7 @@
 					<span>A Software Engineer</span>
 					<p>based out of Orlando, FL who specializes in frontend and backend web development. If you want to learn more about me, check out my resume below.</p>
 				</section>
-				<a class="resumeButton" href="">&#60;resume&#62;</a>
+				<a class="resumeButton" href="/resume/David_Provenzano_Resume.pdf">&#60;resume&#62;</a>
 			</section>
 		</section>
 		<section class="skills">
@@ -110,18 +110,26 @@
 			<section class="contact">
 				<section class="contactContent">
 					<h2>Get In Touch</h2>
-					<p>If you have any questions or just want to say hi, click the button below and let's chat!</p>
+					<p>If you have any questions or just want to say hi, feel free to reach out!</p>
+					<section class="contactLinks">
+						<ul>
+							<li><i class="fa-solid fa-envelope"></i><a href="mailto:dprovenzano13@gmail.com">DProvenzano13@gmail.com</a></li>
+							<li><i class="fa-brands fa-twitter"></i><a href="https://twitter.com/d_provenzano_" target="_blank">DavidProvenzano.com/Twitter</a></li>
+							<li><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/dprovenzano13/" target="_blank">DavidProvenzano.com/Linkedin</a></li>
+							<li><i class="fa-brands fa-github"></i><a href="https://github.com/dprovenzano13" target="_blank">DavidProvenzano.com/Github</a></li>
+						</ul>
+					</section>
 				</section>
-				<a href="mailto:dprovenzano13@gmail.com" class="contactButton">&#60;say hello&#62;</a>
+				<!-- <a href="mailto:dprovenzano13@gmail.com" class="contactButton">&#60;say hello&#62;</a> -->
 			</section>
 		</section>
 		<footer>
 			<p>Designed & Built by <span>David Provenzano<span></p>
 			<section class="footerLinks">
-				<a href="https://github.com/dprovenzano13" target="none"><i class="fa-brands fa-github"></i></a>
-				<a href="https://twitter.com/d_provenzano_"><i class="fa-brands fa-twitter"></i></a>
-				<a href="https://www.linkedin.com/in/dprovenzano13/"><i class="fa-brands fa-linkedin"></i></a>
-				<a href=""><i class="fa-solid fa-envelope"></i></a>
+				<a href="https://github.com/dprovenzano13"><i class="fa-brands fa-github"></i></a>
+				<a href="https://twitter.com/d_provenzano_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+				<a href="https://www.linkedin.com/in/dprovenzano13/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+				<a href="mailto:dprovenzano13@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 			</section>
 		</footer>
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		
