--- a/projects/Doggo Directory/index.html
+++ b/projects/Doggo Directory/index.html
@@ -26,7 +26,9 @@
                     <section class="imageContainer">
                         <section class="container">
                             <div>🐶🐶🐶🐶🐶🐶🐶</div>
-                            <img src="img/corgi.jpeg" width="500" height="500">
+                            <img src="http://placecorgi.com/500/500" 
+                            class="dogImg" 
+                            >
                         </section>
                     </section>
                 </section>
