--- a/projects/Doggo Directory/index.html
+++ b/projects/Doggo Directory/index.html
@@ -26,9 +26,9 @@
                     <section class="imageContainer">
                         <section class="container">
                             <div>🐶🐶🐶🐶🐶🐶🐶</div>
-                            <img src="http://placecorgi.com/500/500" 
+                            <img src="https://placecorgi.com/500/500" 
                             class="dogImg" 
-                            >
+                            alt="picture of corgi">
                         </section>
                     </section>
                 </section>
