Start makiong it mobile

--- a/index copy.html
+++ b/index copy.html
@@ -19,7 +19,7 @@
 	<body>
 			<nav>
 				<section class="navContainer">
-					<a href="#" id="logo"> David Provenzano</a>
+					<a href="" id="logo"> David Provenzano</a>
 					<section class="navLinks">
 						<a href="#" class="isActive">About</a>
 						<a href="#skills">Skills</a>
@@ -40,19 +40,17 @@
 				</section>
 			</nav>
 		<section id="mainTop">
-			<section class="leftTop">
-				<div class="mainImg">
-					<img src="/img/mainMe1.jpg" alt="Picture of David Provenzano">
-				</div>
+			<!-- <img src="/img/mainMe.jpg" alt="Picture of David Provenzano" class="mainImg">
+			<section class="leftTop"> -->
 				<section class="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
-					
-					<p><span>A Software Engineer</span><br>based out of Orlando, FL who specializes in frontend and backend web development. If you want to learn more about me, check out my resume below.</p>
+					<span>A Software Engineer</span>
+					<p>based out of Orlando, FL who specializes in frontend and backend web development. If you want to learn more about me, check out my resume below.</p>
 				</section>
 				<a class="resumeButton" href="/resume/David_Provenzano_Resume.pdf">&#60;resume&#62;</a>
 			</section>
 		</section>
-		<section class="skills">
+		<!-- <section class="skills">
 			<h2 id="skills" >My Skills</h2>
 			<section class="skillsContainer">
 				<section class="skillsInfo">
@@ -65,7 +63,7 @@
 				</section>
 			</section>
 		</section>
-		<!-- <section id="portfolio" class="portfolio">
+		<section id="portfolio" class="portfolio">
 			<h2>Portfolio</h2>
 			<section class="projectsContainer">
 				<section class="topProjects">
