--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</section>
 			</section>
 		</section>
-		<!-- <section id="portfolio" class="portfolio">
+		 <section id="portfolio" class="portfolio">
 			<h2>Portfolio</h2>
 			<section class="projectsContainer">
 				<section class="topProjects">
@@ -110,7 +110,7 @@
 				</section>
 			</section>	
 		</section>
-		<section id="contactContainer" class="mainContact">
+		<!-- <section id="contactContainer" class="mainContact">
 			<section class="contact">
 				<section class="contactContent">
 					<h2>Get In Touch</h2>
