Add contact section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</section>
 			</section>	
 		</section>
-		<!-- <section id="contactContainer" class="mainContact">
+		<section id="contactContainer" class="mainContact">
 			<section class="contact">
 				<section class="contactContent">
 					<h2>Get In Touch</h2>
@@ -126,7 +126,7 @@
 				</section>
 			</section>
 		</section>
-		<footer>
+		<!-- <footer>
 			<p>Designed & Built by <span>David Provenzano<span></p>
 			<section class="footerLinks">
 				<a href="https://github.com/dprovenzano13"><i class="fa-brands fa-github"></i></a>
