Add to top button

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				</section>
 			</section>
 		</section>
-		<!-- <footer>
+		<footer>
 			<p>Designed & Built by <span>David Provenzano<span></p>
 			<section class="footerLinks">
 				<a href="https://github.com/dprovenzano13"><i class="fa-brands fa-github"></i></a>
@@ -135,7 +135,7 @@
 				<a href="mailto:dprovenzano13@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 			</section>
 		</footer>
-		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		 -->
+		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
