Fix desktop sizing

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<h2 id="skills" >My Skills</h2>
 			<section class="skillsContainer">
 				<section class="skillsInfo">
-					<p>My skills include HTML, CSS, and Javascript to make responsive and functional websites or web-based applications utilizing modern JavaScript and best practices.</p>
+					<p>My skills include HTML, CSS, and JavaScript to make responsive and functional websites or web-based applications utilizing modern JavaScript and best practices.</p>
 				</section>
 				<section class="skillsImgContainer">
 						<img src="/img/html.png" alt="html">
@@ -133,7 +133,7 @@
 				<a href="https://www.linkedin.com/in/dprovenzano13/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 				<a href="mailto:dprovenzano13@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 			</section>
-		</footer>
+		</footer> -->
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
