Add hamburger nav menu

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 					</button>
 				</section>
 			</nav>
+			<nav class="hamburgerNav">
+				<a href="#">About</a>
+				<a href="#skills">Skills</a>
+				<a href="#portfolio">Portfolio</a>
+				<a href="#contactContainer">Contact</a>
+			</nav>
 		<section id="mainTop">
 			<section class="leftTop">
 				<div class="mainImg">
