--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<a href="https://www.linkedin.com/in/dprovenzano13/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 				<a href="mailto:dprovenzano13@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 			</section>
-		</footer> -->
+		</footer>
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
